# aipartnerupflow

./: .gitignore  CHANGELOG.md  IMPLEMENTATION_STATUS.md  README.md  pyproject.toml
.cursor/rules/: code.mdc
.github/workflows/: ci.yml
docs/: README.md  STRUCTURE.md  index.md
docs/api/: http.md  python.md  quick-reference.md
docs/architecture/: ARCHITECTURE.md  DIRECTORY_STRUCTURE.md  FEATURES_ARCHITECTURE.md  NAMING_CONVENTION.md  directory-structure.md  overview.md
docs/development/: CLI_DESIGN.md  DEVELOPMENT.md  setup.md
docs/development/design/: cli-design.md
docs/development/planning/: implementation-plan.md
docs/getting-started/: index.md  quick-start.md
docs/guides/: api-server.md  cli.md  faq.md  library-usage-example.py  library-usage.md  task-orchestration.md
docs/planning/: CLI_DESIGN.md  IMPLEMENTATION_PLAN.md
docs/usage/: CLI_USAGE.md
scripts/: release.sh
src/aipartnerupflow/: __init__.py  decorators.py
src/aipartnerupflow/api/: __init__.py  a2a_server.py  agent_executor.py  app.py  custom_starlette_app.py  extensions.py  main.py
src/aipartnerupflow/api/a2a/: agent_executor.py  custom_starlette_app.py  server.py
src/aipartnerupflow/api/routes/: system.py  tasks.py
src/aipartnerupflow/cli/: extension.py  main.py
src/aipartnerupflow/cli/commands/: __init__.py  daemon.py  generate.py  list_flows.py  run.py  serve.py  tasks.py
src/aipartnerupflow/core/: __init__.py  decorators.py  types.py
src/aipartnerupflow/core/base/: base_task.py
src/aipartnerupflow/core/config/: __init__.py  registry.py
src/aipartnerupflow/core/execution/: __init__.py  executor_registry.py  streaming_callbacks.py  task_creator.py  task_executor.py  task_manager.py
src/aipartnerupflow/core/extensions/: __init__.py  decorators.py  hook.py  registry.py  types.py
src/aipartnerupflow/core/interfaces/: __init__.py  executable_task.py  plugin.py
src/aipartnerupflow/examples/: __init__.py  data.py
src/aipartnerupflow/extensions/: __init__.py
src/aipartnerupflow/features/: __init__.py
tests/: conftest.py  test_agent_executor.py  test_stdio_security.py  test_task_creator.py  test_task_manager.py
tests/api/: test_agent_executor.py  test_main.py  test_main_env_loading.py  test_tasks_routes.py
tests/api/a2a/: test_agent_executor.py  test_http_json_rpc.py
tests/cli/: test_cli_env_loading.py  test_daemon_command.py  test_generate_command.py  test_run_command.py  test_tasks_command.py
tests/core/: test_decorators.py  test_demo_mode.py  test_task_creator.py  test_task_manager.py
tests/core/execution/: test_task_executor_tools_integration.py  test_task_failure_handling.py  test_task_manager.py
tests/core/storage/: test_context.py
tests/extensions/crewai/: test_batch_manager.py  test_crew_manager.py  test_tools_decorator.py
tests/extensions/docker/: test_docker_executor.py
tests/extensions/generate/: test_llm_client.py
tests/extensions/grpc/: test_grpc_executor.py
tests/extensions/llm/: test_llm_executor.py
tests/extensions/ssh/: test_ssh_executor.py
tests/extensions/stdio/: test_stdio_security.py
tests/extensions/tools/: test_tools_decorator.py
(+46 files in other folders)
